# chip8

./: ASSEMBLY.md  CMakeLists.txt  README.md  assembler.c  assembly.c  assembly.h  chip8.c  chip8.h  disassembler.c  disassembler.h  emulator.c  log.c  log.h  log_reader.c  main.c
emulator/: chip8.c  chip8.h
